maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:7: error: illegal start of simple expression
  var Coord = ([x,y])
               ^ShortestPathMaze:17: error: ')' expected but '}' found.
}
^ShortestPathMaze:32: error: illegal start of simple expression
  var L = []
          ^ShortestPathMaze:36: error: identifier expected but integer literal found.
      L=L+[x,y-1]
               ^ShortestPathMaze:37: error: ']' expected but '}' found.
    } 
    ^ShortestPathMaze:36: error: type application is not allowed for postfix operators
      L=L+[x,y-1]
         ^ShortestPathMaze:42: error: identifier expected but integer literal found.
      L=L+[x-1,y]
             ^ShortestPathMaze:43: error: ']' expected but '}' found.
    }
    ^ShortestPathMaze:42: error: type application is not allowed for postfix operators
      L=L+[x-1,y]
         ^ShortestPathMaze:48: error: identifier expected but integer literal found.
      L=L+[x+1,y]
             ^ShortestPathMaze:49: error: ']' expected but '}' found.
    }
    ^ShortestPathMaze:48: error: type application is not allowed for postfix operators
      L=L+[x+1,y]
         ^ShortestPathMaze:54: error: identifier expected but integer literal found.
      L=L+[x,y+1]
               ^ShortestPathMaze:55: error: ']' expected but '}' found.
    }
    ^ShortestPathMaze:54: error: type application is not allowed for postfix operators
      L=L+[x,y+1]
         ^